# Oraisan-Cosmos-Contract-Demo

./: .env  .env_example  .gitignore  Cargo.toml  NOTICE  README.md  package-lock.json  package.json
circuit/: verification_key.json
scripts/: test.ts
scripts/proofDepositTree/: block.json  deposit1.json  deposit2.json  proof.json  public.json  tx_data.json
src/: contract.rs  error.rs  lib.rs  mimc.txt  msg.rs  poseidon.rs  state.rs
