[package]
name = "oraisan-cosmos-contract-demo"
version = "0.1.0"
authors = ["lquochieu <trantronghiep2001@gmail>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = { path = "packages/cw20", version = "1.0.1" }
schemars = "0.8.10"
thiserror = { version = "1.0.31" }
# ff = {package="ff_ce", version="0.13.1", features = ["derive"]}
rand = "0.4"
num = "0.2.0"
bigint = "4.4.3"
tiny-keccak = "1.5"

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
# serde_json = { version = "1.0.48",  default-features = false, features = ["float_roundtrip"] }
serde_json = { package="serde-json-wasm", version="0.4.0"}
bech32 = "0.8.1"
sha2 = "0.9"
hex = "0.4"

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve", "r1cs"], optional = true }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

arkworks-setups = { version = "0.5.3", default-features = false }
arkworks-native-gadgets = { version = "0.5.3", default-features = false }

ark-ec = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }

[dev-dependencies]
cw-multi-test = "0.16.2"
